frontend/src/styles/reminders.css
h2{
    background: #2980b9;
    color: white;
    margin: 0;
    padding: 10px 20px;
    text-transform: uppercase;
    font-size: 24px;
    font-weight: normal;
}

ul{
    list-style: none;
    margin: 0;
    padding: 0;
}

li{
    background: #fff;
    height: auto;
    color: #666;
    padding: 10px;
    margin-bottom: 10px;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
}

/* Alternate background for every other li */
li:nth-child(2n){
    background: #f7f7f7;
}

li span{
    background: #e74c3c;
    height: 40px;
    margin-right: 20px;
    text-align: center;
    color: white;
    width: 0px;
    display: inline-block;
    transition: 0.2s linear;
    opacity: 0;
}

li:hover span{
    width: 40px;
    opacity: 1.0;
}

input{
    font-size: 18px;
    background: #f7f7f7;
    width: 100%;
    padding: 13px 13px 13px 20px;
    box-sizing: border-box;
    color: #2980b9;
    border: 3px solid rgba(0,0,0,0);
}

input:focus{
    background: white;
    border: 3px solid #2980b9;
    outline: none;
}

.completed{
    color: gray;
    text-decoration: line-through;
}

/* body{
    font-family: 'Roboto', sans-serif;
    background: #70e1f5;
    background: -webkit-linear-gradient(to right, #ffd194, #70e1f5);
    background: linear-gradient(to right, #ffd194, #70e1f5);
} */

.complete-button {
  background-color: #2980b9;
  color: white;
  border: none;
  padding: 5px 15px;
  cursor: pointer;
  font-size: 14px;
  text-transform: uppercase;
  transition: background-color 0.3s;
}

.complete-button:hover {
  background-color: #1c6f94;
}

.completed-tasks {
    padding: 0 18px;
    display: none;
    overflow: hidden;
    cursor: pointer;
}
.active{
    transition: max-height 0.5s ease-in-out;
}
.test{
    cursor: pointer;
}

